fixed actionbox on iphone

--- a/src/styles/Message.scss
+++ b/src/styles/Message.scss
@@ -907,3 +907,24 @@
     }
   }
 }
+
+@media screen and (max-width: 470px) {
+  .str-chat__message-simple {
+    .str-chat__message-simple__actions__action--options {
+      .str-chat__message-actions-box {
+        left: unset;
+        right: 100%;
+        border-radius: $border-radius $border-radius $border-radius 0;
+      }
+    }
+    &--me {
+      .str-chat__message-simple__actions__action--options {
+        .str-chat__message-actions-box {
+          left: 100%;
+          right: unset;
+          border-radius: $border-radius $border-radius $border-radius 0;
+        }
+      }
+    }
+  }
+}
